# fish-lsp

./: Cargo.toml  README.md  test.fish
lsp/: fish-lsp.lua
src/: cli.rs  completions.rs  main.rs  server.rs
