[package]
name = "fish-lsp"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
clap = { version = "4.5.4", features = ["derive"] }
regex = "1.10.4"
serde = { version = "1.0.203", features = ["derive"] }
tokio = { version = "1.37.0", features = ["full"] }
tokio-util = { version = "0.7.11", features = ["full"] }
tower-lsp = "0.20.0"
